tests/NormalTests/paczka1/fuzzy1/57625765.err
Error in line 5: ZDCISQ A615 497,60
Error in line 9: tbu A615 18,8
Error in line 1: ZDCISQ A615 99,4
Error in line 15: S682 A61` 421,8
Error in line 22: w4fD A438 93,0
Error in line 24: 9A7Un A698 76,8
Error in line 28: 9A7Un A615 85,2
Error in line 8: S682 A615 91,7
Error in line 39: 9A7Un A98 89,7
